src/test/deca/context/invalid/type_not_declared.deca
// Test la règle 0.2: le type utilisé n'existe pas dans 
// l'environnement des types.

{
    typeAlien alien = 15;
}

// Resultat:
//# doit afficher erreur regle 0.2
//# TODOTEST